@@ -6,7 +6,8 @@ TEMPLATE = app
 TARGET += 
 DEPENDPATH += .
 INCLUDEPATH += .
-TRANSLATIONS = Translations/kidbasic_en_US.ts
+TRANSLATIONS = Translations/kidbasic_en_US.ts\
+		Translations/kidbasic_de.ts
 
 # Input
 HEADERS += LEX/basicParse.tab.h BasicEdit.h Interpreter.h RunController.h BasicOutput.h BasicGraph.h GhostButton.h PauseButton.h
